--- a/index.html
+++ b/index.html
@@ -199,10 +199,10 @@
                   <img src="images/s1.png" alt="" />
                 </div>
                 <div class="detail-box">
-                  <h5>Cardiology</h5>
+                  <h5>Child Care</h5>
                   <p>
-                    fact that a reader will be distracted by the readable page
-                    when looking at its layout.
+                    Child care is the action or skill of looking after children
+                    by a daycare center, nannies, babysitters, teachers.
                   </p>
                 </div>
               </div>
@@ -213,10 +213,11 @@
                   <img src="images/s2.png" alt="" />
                 </div>
                 <div class="detail-box">
-                  <h5>Diagnosis</h5>
+                  <h5>Skin Treatment</h5>
                   <p>
-                    fact that a reader will be distracted by the readable page
-                    when looking at its layout.
+                    Acne is a disease that involves the oil glands of the skin.
+                    The skin has pores that connect to oil glands located under
+                    the skin. .
                   </p>
                 </div>
               </div>
@@ -227,7 +228,7 @@
                   <img src="images/s3.png" alt="" />
                 </div>
                 <div class="detail-box">
-                  <h5>Surgery</h5>
+                  <h5>Migraine Treatment</h5>
                   <p>
                     fact that a reader will be distracted by the readable page
                     when looking at its layout.
@@ -275,12 +276,12 @@
                 <h2>About <span>Us</span></h2>
               </div>
               <p>
-                There are many variations of passages of Lorem Ipsum available,
-                but the majority have suffered alteration in some form, by
-                injected humour, or randomised words which don't look even
-                slightly believable. If you are going to use a passage of Lorem
-                Ipsum, you need to be sure there isn't anything embarrassing
-                hidden in the middle of text. All
+                At Dr Jaffuz Homeo Clinic, our aim is to provide homeopathic
+                care for you and your family. Ours is a simple & humble clinic
+                providing conscientious and passionate homeopathic care since
+                2022. We are happy to provide the highest quality homoeopathic
+                treatment and personalised medical services to the people of
+                Arumanai and surrounded places for almost one year.
               </p>
               <a href=""> Read More </a>
             </div>
@@ -430,7 +431,15 @@
           <div class="col-md-6">
             <div class="map_container">
               <div class="map">
-                <div id="googleMap"></div>
+                <iframe
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3947.322387343993!2d77.24260151458503!3d8.369913801267785!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b045383c20e5327%3A0x21ddb1d4b972de44!2zTWVsYXRoZXJ1LCBNdXRoYXJhbW1hbiBUZW1wbGUg4LSu4LWH4LSy4LSk4LWG4LSw4LWBIOC0ruC1geC0pOC1jeC0pOC0vuC0sOC0ruC1jeC0ruC1uyDgtJXgtY3gtLfgtYfgtKTgtY3gtLDgtIIgVEVBTV9VUFBE!5e0!3m2!1sen!2sin!4v1665046404019!5m2!1sen!2sin"
+                  width="600"
+                  height="450"
+                  style="border: 0"
+                  allowfullscreen=""
+                  loading="lazy"
+                  referrerpolicy="no-referrer-when-downgrade"
+                ></iframe>
               </div>
             </div>
           </div>
@@ -561,15 +570,15 @@
               <div class="contact_link_box">
                 <a href="">
                   <i class="fa fa-map-marker" aria-hidden="true"></i>
-                  <span> Location </span>
+                  <span> Arumanai </span>
                 </a>
                 <a href="">
                   <i class="fa fa-phone" aria-hidden="true"></i>
-                  <span> Call +01 1234567890 </span>
+                  <span> Call +91 94891 86855 </span>
                 </a>
                 <a href="">
                   <i class="fa fa-envelope" aria-hidden="true"></i>
-                  <span> demo@gmail.com </span>
+                  <span> drjaffuz@gmail.com </span>
                 </a>
               </div>
             </div>
@@ -592,9 +601,8 @@
             <div class="footer_detail">
               <h4>About</h4>
               <p>
-                Beatae provident nobis mollitia magnam voluptatum, unde dicta
-                facilis minima veniam corporis laudantium alias tenetur eveniet
-                illum reprehenderit fugit a delectus officiis blanditiis ea.
+                At Dr Jaffuz Homeo Clinic, our aim is to provide homeopathic
+                care for you and your family.
               </p>
             </div>
           </div>
@@ -646,7 +654,7 @@
     <!-- custom js -->
     <script type="text/javascript" src="js/custom.js"></script>
     <!-- Google Map -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCh39n5U-4IoWpsVGUHWdqB6puEkhRLdmI&callback=myMap"></script>
+
     <!-- End Google Map -->
   </body>
 </html>
